fixed overflow-x bug

--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,20 @@ theme.
 /*----------------------------------------------------*/
 /*---------------------------------------------------- */
 /*----------------------------------------------------*/
+
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 html{
   scroll-behavior: smooth;
 }
+
 body {
   line-height: 25px;
   font-size: 16px;
@@ -3066,9 +3077,9 @@ h6 {
     transition: all 400ms linear;
     cursor: pointer; }
 
-  .navbar{
-    padding-left: 15px;
-    padding-right: 15px; }
+    .navbar .container {
+      padding-left: 15px;
+      padding-right: 15px; }
 
   .nav {
     padding: 0px 0px; }
@@ -3725,7 +3736,7 @@ h6.small-heading {
     }
   .hero__img {
     top: 60%;
-    left: 1rem;
+    left: 1.5rem;
     width: 100%;
     z-index: 1;
     position: absolute
@@ -3738,11 +3749,12 @@ h6.small-heading {
   .hero__text {
     margin-bottom: 3rem;
     color: white;
+    margin-top: 2.4rem;
   }
   .hero__content {
     z-index: 4;
     width: auto;
-    margin-top: -19em;
+    margin-top: -18em;
     position: absolute;
     
   }
@@ -3831,12 +3843,14 @@ Feature Style Rules
   position: relative;
   margin-left: 5.5rem;
   min-height: 18.8rem;
-  min-width: 18.8rem;
+  min-width: 16.8rem;
   margin-top:7.5rem;
+  text-align: center;
+  left: -5.5rem;
 }
 
 .feature__icon {
-  left: -3rem;
+  left: -4rem;
   top: -3rem;
   width: 5.3rem;
   height: 5.3rem;
